TAP5-2741: First progress towards a more flexible build setup.