@@ -86,17 +86,6 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    repositories {
-        mavenLocal()
-        mavenCentral()
-
-        // All things JBoss/Hibernate
-        maven {
-            name "JBoss"
-            url "https://repository.jboss.org/nexus/content/repositories/releases/"
-        }
-    }
-
     configurations {
         // Non-code artifacts, such as sources JARs and zipped JavaDocs
         meta
@@ -137,6 +126,8 @@ String jdkVersion = System.properties['java.version']
 def jdkMajorVersion = jdkVersion.substring(0, jdkVersion.indexOf(".")) // 1, 9, 10...
 
 subprojects {
+	
+	if (!project.name.equals('platform')) {
     
     def specifyMaxPermSize = jdkVersion ==~ /1\.[67].+/
 
@@ -146,83 +137,24 @@ subprojects {
         provided
     }
 
-    apply plugin: "java"
-    apply plugin: "java-library"
+//    apply plugin: "java"
+//    apply plugin: "java-library"
     apply plugin: "groovy" // mostly for testing
-
-    apply plugin: "project-report"
-    apply plugin: "jacoco"
+//    apply plugin: "project-report"
     apply plugin: "base"
     
-    jacoco {
-        toolVersion = "0.8.7"
-    }
-    
-    sourceCompatibility = "1.8"
-    targetCompatibility = "1.8"
-
-    // See http://jira.codehaus.org/browse/GRADLE-784
-
-    sourceSets {
-        main {
-            compileClasspath += configurations.provided
-        }
-        test {
-            compileClasspath += configurations.provided
-            runtimeClasspath += configurations.provided
-        }
-    }
-
-    idea.module {
-        scopes.PROVIDED.plus += [configurations.provided]
-    }
-
-    eclipse.classpath.plusConfigurations += [configurations.provided]
-
-    dependencies {
-        
-        // https://docs.gradle.org/7.3.3/userguide/upgrading_version_6.html#potential_breaking_changes, 
-        // Table 1. Common configuration upgrades
-        testImplementation "org.spockframework:spock-core:${versions.spock}"
-         
-        testRuntimeOnly "org.slf4j:slf4j-log4j12:${versions.slf4j}"
-    }
-
-    compileTestGroovy {
-        configure(groovyOptions.forkOptions) {
-            memoryMaximumSize = '1g'
-            jvmArgs = ['-Xms512m', '-Xmx1g']
-            if (specifyMaxPermSize){
-              jvmArgs << '-XX:MaxPermSize=512m'
-            }
-        }
-    }
-
     tasks.withType(Test) {
-        useTestNG()
+//        useTestNG()
 
-        options.suites("src/test/conf/testng.xml")
-        if (specifyMaxPermSize){
-          maxHeapSize "400M"
-          jvmArgs("-XX:MaxPermSize=200m")
-        }else{
-          maxHeapSize "600M"
-        }
-    
-        // Needed to have XMLTokenStreamTests.testStreamEncoding() passing on Java 9+
-        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_1_9)) {
-            jvmArgs("--add-opens=java.base/java.nio.charset=ALL-UNNAMED");
-        }
+//        options.suites("src/test/conf/testng.xml")
     
         // Turn off live service reloading
 
         systemProperties["tapestry.service-reloading-enabled"] = "false"
+		
+		
         systemProperties["java.io.tmpdir"] = temporaryDir.absolutePath
 
-        jvmArgs("-Dfile.encoding=UTF-8")
-
-        environment.LANG = 'en_US.UTF-8'
-        
         if (continuousIntegrationBuild) {
           // Travis runs our builds with TERM=dumb and kills it if we don't produce any
           // output for 10 minutes, so we log some task execution progress 
@@ -252,14 +184,13 @@ subprojects {
         		.replaceAll("tapestry5", "tapestry")
         		.replaceAll("tapestry-", "")
         		.replaceAll("-", ""))        		
-        	if (projectDir.getName().equals("tapestry-version-migrator")) {
-        		attributes("Main-Class": "org.apache.tapestry5.versionmigrator.Main")
-        	}
         }
     }
     
     assemble.dependsOn(processResources, compileJava, jar)
 
+	
+	// TODO can we just use java.withSourcesJar() in Gradle 7.4.1? 
     task sourcesJar(type: Jar) {
         dependsOn classes
         classifier "sources"
@@ -358,6 +289,7 @@ subprojects {
         }
 
     }
+	}
 }
 
 subprojects.each { project.evaluationDependsOn(it.name) }
@@ -382,73 +314,76 @@ subprojects {
     }
 }
 
-// Cribbed from https://github.com/hibernate/hibernate-core/blob/master/release/release.gradle#L19
 
-task aggregateJavadoc(type: Javadoc) {
-    dependsOn configurations.javadoc
-    group "Documentation"
-
-    description "Build the aggregated JavaDocs for all modules"
-    maxMemory "512m"
-    destinationDir file("$buildDir/documentation/javadocs")
-
-    def tapestryStylesheet = file("src/javadoc/stylesheet7.css")
-    int thisYear = java.time.Year.now().getValue()
-
-    def allMainSourceSets = subprojects*.sourceSets*.main.flatten()
-    def allMainJavaFiles = allMainSourceSets*.java
-    def allMainJavaSrcDirs = allMainJavaFiles*.srcDirs
-
-    options {
-        splitIndex true
-        linkSource true
-        stylesheetFile tapestryStylesheet
-        windowTitle "Tapestry API - ${project.version}"
-        header "Tapestry API - ${project.version}"
-        docTitle "Tapestry API - ($project.version)"
-        bottom "${project.version} - Copyright &copy; 2003-${thisYear} <a href=\"http://tapestry.apache.org/\">The Apache Software Foundation</a>."
-        use = true // 'use' seems to be a reserved word for the DSL
-        links "https://docs.oracle.com/javase/8/docs/api/"
-        links "https://docs.oracle.com/javaee/7/api/"
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            tagletPath Collections.unmodifiableList(new ArrayList<>((Set) configurations.javadoc.files))
-        }
-        //  Uncomment jFlags to debug `./gradlew aggregateJavadoc`
-//        jFlags '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
-        addStringOption '-source-path', files(allMainJavaSrcDirs.flatten()).asPath
-        addStringOption 'source', '8'
-        taglets "org.apache.tapestry5.javadoc.TapestryDocTaglet"
-    }
-
-    exclude "org/apache/tapestry5/internal/plastic/asm/**"
-    exclude "org/apache/tapestry5/internal/webresources/**"
-    exclude "org/apache/tapestry5/webresources/modules/**"
-    
-    source allMainJavaFiles
-
-    classpath += files(allMainSourceSets*.compileClasspath)
-
-    inputs.files allMainJavaSrcDirs
-
-    // As part of generating the documentation, ALSO copy any related files:
-    // Any extra images (Tapestry logo)
-    // Any images stored under src/main/java ... everything but .java, .xdoc and package.html
-
-    doLast {
-        copy {
-            from allMainJavaSrcDirs
-            into aggregateJavadoc.destinationDir
-            exclude "**/*.java"
-            exclude "**/*.xdoc"
-            exclude "**/package.html"
-        }
-
-        copy {
-            from file("src/javadoc/images")
-            into aggregateJavadoc.destinationDir
-        }
-    }
-}
+// Perhaps we can leverage the https://docs.freefair.io/gradle-plugins/current/reference/#_io_freefair_aggregate_javadoc plugin to simplify aggreagted Javadoc generation.
+//
+//// Cribbed from https://github.com/hibernate/hibernate-core/blob/master/release/release.gradle#L19
+//
+//task aggregateJavadoc(type: Javadoc) {
+//    dependsOn configurations.javadoc
+//    group "Documentation"
+//
+//    description "Build the aggregated JavaDocs for all modules"
+//    maxMemory "512m"
+//    destinationDir file("$buildDir/documentation/javadocs")
+//
+//    def tapestryStylesheet = file("src/javadoc/stylesheet7.css")
+//    int thisYear = java.time.Year.now().getValue()
+//
+//    def allMainSourceSets = subprojects*.sourceSets*.main.flatten()
+//    def allMainJavaFiles = allMainSourceSets*.java
+//    def allMainJavaSrcDirs = allMainJavaFiles*.srcDirs
+//
+//    options {
+//        splitIndex true
+//        linkSource true
+//        stylesheetFile tapestryStylesheet
+//        windowTitle "Tapestry API - ${project.version}"
+//        header "Tapestry API - ${project.version}"
+//        docTitle "Tapestry API - ($project.version)"
+//        bottom "${project.version} - Copyright &copy; 2003-${thisYear} <a href=\"http://tapestry.apache.org/\">The Apache Software Foundation</a>."
+//        use = true // 'use' seems to be a reserved word for the DSL
+//        links "https://docs.oracle.com/javase/8/docs/api/"
+//        links "https://docs.oracle.com/javaee/7/api/"
+//        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+//            tagletPath Collections.unmodifiableList(new ArrayList<>((Set) configurations.javadoc.files))
+//        }
+//        //  Uncomment jFlags to debug `./gradlew aggregateJavadoc`
+////        jFlags '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
+//        addStringOption '-source-path', files(allMainJavaSrcDirs.flatten()).asPath
+//        addStringOption 'source', '8'
+//        taglets "org.apache.tapestry5.javadoc.TapestryDocTaglet"
+//    }
+//
+//    exclude "org/apache/tapestry5/internal/plastic/asm/**"
+//    exclude "org/apache/tapestry5/internal/webresources/**"
+//    exclude "org/apache/tapestry5/webresources/modules/**"
+//    
+//    source allMainJavaFiles
+//
+//    classpath += files(allMainSourceSets*.compileClasspath)
+//
+//    inputs.files allMainJavaSrcDirs
+//
+//    // As part of generating the documentation, ALSO copy any related files:
+//    // Any extra images (Tapestry logo)
+//    // Any images stored under src/main/java ... everything but .java, .xdoc and package.html
+//
+//    doLast {
+//        copy {
+//            from allMainJavaSrcDirs
+//            into aggregateJavadoc.destinationDir
+//            exclude "**/*.java"
+//            exclude "**/*.xdoc"
+//            exclude "**/package.html"
+//        }
+//
+//        copy {
+//            from file("src/javadoc/images")
+//            into aggregateJavadoc.destinationDir
+//        }
+//    }
+//}
 
 task coffeeScriptDocs(type: Exec) {
     group "Documentation"
@@ -473,14 +408,15 @@ task coffeeScriptDocs(type: Exec) {
 
 
 
-dependencies {
-    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-        meta aggregateJavadoc.outputs.files
-    }
-}
+//dependencies {
+//    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+//        meta aggregateJavadoc.outputs.files
+//    }
+//}
+
 
 task combinedJacocoReport(type:JacocoReport){
-  def subprojectsToConsider = subprojects.findAll {it.name != 'quickstart' && it.name != 'beanmodel' && it.name != 'commons' && it.name != 'genericsresolver-guava' && it.name != 'tapestry5-annotations' && it.name != 'tapestry-internal-test' && it.name != 'tapestry-runner' && it.name != 'tapestry-test-constants' && it.name != 'tapestry-test-data' && it.name != 'tapestry-ioc-jcache'}
+  def subprojectsToConsider = subprojects.findAll {it.name != 'quickstart' && it.name != 'beanmodel' && it.name != 'commons' && it.name != 'genericsresolver-guava' && it.name != 'tapestry5-annotations' && it.name != 'tapestry-internal-test' && it.name != 'tapestry-runner' && it.name != 'tapestry-test-constants' && it.name != 'tapestry-test-data' && it.name != 'tapestry-ioc-jcache' && it.name != 'platform'}
   dependsOn = subprojectsToConsider.test
   additionalSourceDirs.from(files(subprojectsToConsider.sourceSets.main.allSource.srcDirs))
   sourceDirectories.from(files(subprojectsToConsider.sourceSets.main.allSource.srcDirs))
@@ -508,7 +444,7 @@ task continuousIntegration {
     // tapestry-javadoc doesn't work with Java 8 anymore. That's why it's only added if != 8.
     def dependants = [subprojects.build, 'tapestry-core:testWithPrototype', combinedJacocoReport]
     if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-        dependants << aggregateJavadoc
+        // dependants << aggregateJavadoc
     }
     dependsOn dependants
     description "Task executed on Jenkins CI server after Git commits"
@@ -536,7 +472,7 @@ task zippedSources(type: Zip) {
 }
 
 task zippedApidoc(type: Zip) {
-    dependsOn aggregateJavadoc
+    // dependsOn aggregateJavadoc
     description "Zip archive of the project's aggregate JavaDoc and CoffeeScript documentation"
     group "Release artifact"
 
@@ -554,7 +490,7 @@ task zippedApidoc(type: Zip) {
         exclude "*.html"
     }
 
-    into "apidocs", { from aggregateJavadoc.outputs.files }
+    // into "apidocs", { from aggregateJavadoc.outputs.files }
 
 
     into "coffeescript", { from coffeeScriptDocs.outputs.files }
